Fix issue "Long text strings get overflow #263" https://github.com/jasny/bootstrap/issues/263

--- a/scss/_fileinput.scss
+++ b/scss/_fileinput.scss
@@ -64,8 +64,15 @@
   vertical-align: middle;
   display: inline-block;
   overflow: hidden;
+  vertical-align: middle;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  padding-left: 30px;
   white-space: nowrap;
   text-overflow: ellipsis;
+
+
 }
 .form-control .fileinput-filename {
   vertical-align: bottom;
